# VeriSite

./: .gitignore  README.md
chain/: Cargo.toml
chain/pallets/certificates/: Cargo.toml
chain/pallets/certificates/src/: rpc.rs
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: CertCard.tsx  QrScanner.tsx
frontend/app/lib/: types.ts
frontend/app/verify/: page.tsx
frontend/app/verify/[account]/: page.tsx
frontend/public/: manifest.json
issuer-cli/: Cargo.toml
issuer-cli/src/: main.rs
proofforge/: README.md  docker-compose.yml
proofforge/chain/: Cargo.toml
proofforge/chain/pallets/certificates/src/: lib.rs
proofforge/frontend/: package.json
proofforge/frontend/app/: layout.tsx  page.tsx
proofforge/frontend/app/components/: CertList.tsx
proofforge/frontend/app/lib/: api.ts
proofforge/frontend/app/verify/: page.tsx
proofforge/frontend/app/verify/[account]/: page.tsx
proofforge/issuer-cli/: Cargo.toml
proofforge/issuer-cli/src/: main.rs
proofforge/tools/qr-gen/: Cargo.toml
proofforge/tools/qr-gen/src/: main.rs
tools/qr-gen/: Cargo.toml
tools/qr-gen/src/: main.rs
