[package]
name = "proofforge-qr-gen"
version = "0.1.0"
edition = "2021"
authors = ["ProofForge Team"]
description = "QR code generator for ProofForge credentials"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
qrcode = "0.12.0"
image = "0.24.7"
anyhow = "1.0.75"
sp-core = "15.0.0" 